Update analyst comments PUT route spec
